@@ -109,8 +109,8 @@ DIST ghc-bin-7.6.3-r1-sparc.tbz2 121641337 SHA256 0fb31b9584c1c6caafb44a51158bfd
 DIST ghc-bin-7.6.3-x86.tbz2 93718672 SHA256 a55024f66a048437fcd6ef0f33cdb994a43628998a2f0fe4d094cc9ba83d1615 SHA512 624f2a3238dee15853018d45632d1363e42d34099a77e5e9ce5c8da976cb4c33578144f7c39dbf25ee68c17d8d42910db2347186849eeeda6bc20053ce2be990 WHIRLPOOL bc646fc19906b59416358fb7558b6e2c3f7ad069c2fcf443be36b621894cfcecb0844acf5b5f9c383e034dfff3e24d312a7da0d7a629836134ec5dc1ecd6f139
 DIST ghc-bin-7.8.3-amd64.tbz2 100786052 SHA256 af49f547336a4f9f13cd625155d5a6a998e52ae7da8bbbddc856f88b00b6aff4 SHA512 b1826095b67fa2028678057f70909bff4e082b82f3b70f1aedbc91073efad54334fa1864bc8248c9249eec6edab3671dc38ac1650be86f1245e2fecf92528952 WHIRLPOOL 5b44fff77a0d79c6f7c5c8ca792eb6b36987d1de58d5ebc0a9b05da9c19a2c312eca6b9d40e7e63437742b7f9c28c925feb3bea7f9803dda95fac7acaa7a3132
 DIST ghc-bin-7.8.3-x86.tbz2 102583755 SHA256 c67f0d2471e594b4fdfc5b219bb6b61e57e6ba75132aa3f63d171550af8cbe3c SHA512 badabbba2f46b5ab3a2601e53997ce6533162afeec7dc36eeb877a62680a9f599aeb05dd3682f45d3e273d71d28b8bd01eee37dcad3c7354e8f83b7be4e58536 WHIRLPOOL 7b99b6bbeb4ad6d203f270d8446285825ad0857a8ab058d8c126155b49e8819e0efc2f6c42b5ff775dc0ece5488e97fcc7ae2459fe87fdceef43d63a75443430
-EBUILD ghc-6.12.3-r2.ebuild 20675 SHA256 bfd4536561b75cb916dd72c412d9e60e157947917f43a00670762cb7336524e2 SHA512 1458938d4dcb52159a2f1bcb32dbd702f04698efdf53ee59c1150c2e469f804e38a9193474ed6a37621c801caa9137ff7029ffaf2f4955eaa4f8203ba799d6de WHIRLPOOL 75eeaac98370a74ec53ce58b33993076ea9f1743b30496a276b757eee3de87e18b501d5ed76a5ca3541a2791c1dac86fb7bfe4f4b1790035281373558a1cd125
-EBUILD ghc-7.0.4.ebuild 20134 SHA256 918f6ef949c3bf028fe10f3e971dac9aa3df9ca23308ef89dab2949fadcdf02a SHA512 f2315db7a9a83ddb89b073afeb7f162c8dcaddaa06a0c5ad64ead71a77e4a98020fc310fc4ff726df7d8b9549c5bb3c29c8af406a42d3b9cc015b237821b5c19 WHIRLPOOL c5ed79eeff5d72fd9243e545870d6402f3d49307cfc67893e2d729f7e07187781e9f388fd0ed35f7e3e5986e6e42be0c1d5bace877a04671e7707fb11db08692
+EBUILD ghc-6.12.3-r2.ebuild 20796 SHA256 527f54ef419549e18778e2b3be5ecbe3026fcd7a91c6e52e373c7214ac1a826a SHA512 028a823d9e1da226580c28405e8d8d555dcac4a605731de1066ff695428fe2b26efe7d0345a32b037952bc48b35968e2a427f89000ebbb89e5ec32d7dba0c60a WHIRLPOOL c32681c78b7f78b93c42fd161c057ce414ce397a893cb2301ee14e0871326923dfc18b9b81e1a6444dca5a5432a34514e373137d4f6fffd680e17e0686a74c26
+EBUILD ghc-7.0.4.ebuild 20256 SHA256 d9525a3cec1a9f0ba46eb8ac0fb4fe4e136bef03f6c7dfd6bfe82c82e2ff6552 SHA512 35989124a714ac7297af8043653fd34844effe545c7775b37a1b98a7f4d58d7478de1300bd85cce9a0a34ed24cc27f7ffa1a250f167e6632c6ca75e499b43a02 WHIRLPOOL d7e349c59deaa0ef7a1293e4742d667cd4e537633725f6a611c6ea03f2a6b0e3960fb82ceca2bb0e301cff41940c883f2b08679b25cb53d330abfa2c9b5a52e8
 EBUILD ghc-7.4.1-r1.ebuild 21359 SHA256 58c914920bddc3dc9ef84509fd58ec2d3cb86ca8f61f316b85aac75cc8985206 SHA512 8aeeded46d1ab2baeb14837d7b58a7cac4b2c3b8960bd85b9885dae616e44594b831dd336469f2f2f168393fce76215809640d1d1ed84c44c5ceb321ca67b14d WHIRLPOOL 102d072ffb5bfbfbc1e70fa8b6b94c8308587d9669edf56b47505b62039aa2ef02e1c6f6c8d859d3189f2a983b420e0410cfd6303ef6950684810760a1c3711b
 EBUILD ghc-7.4.1.ebuild 20555 SHA256 24af5f5cac7746f627708fc5e74fc72f528409f2912032a5ed8bf0595d3d88a3 SHA512 040180430cacfb19816dbbb7deed54ea08424d5ceae275a61b25bde38f68419fa6a65e1dc7dddc887f967eeb47ae81f430a2dbc4cc750c542254e91101734d47 WHIRLPOOL b344b1465f05555da6b22be4351820c557cc575e61661dab79dea92ae98530fa57c8174a108cf80b5cfccc6572a4b5b14a23393719e307fca16bf91781c2951e
 EBUILD ghc-7.4.2.ebuild 22109 SHA256 c061678ca7fb3e578856ed5e5ccd72b9e1cf86000889d41b64bf51dcfcdaad3c SHA512 9fa1ac3968cb2e9cc231d2fdaf0fee54b1070c925a86f5fc257858a3bab9eb1b684893a405d4f7fbbc0a6771fa06b7d572e790368f8093e23abed176cefaa43a WHIRLPOOL 813f4113c4dd73bfd0591d48f426a6451b1662458e75ea6b3f748a8d64fec354273cc15f8db218e03965338e87e0b00ffc424dd7defc77a5424ef8651fa29038
@@ -118,12 +118,12 @@ EBUILD ghc-7.6.2.ebuild 25352 SHA256 1986bda9cf2dcc52b90b3dd18d8241bb9d93b5f7b7e
 EBUILD ghc-7.6.3-r1.ebuild 29017 SHA256 898e3fe4d3561f75a46d65a3e3bb978895e63c0ae2b77075e899fdaebd6328ad SHA512 1b5e5bc934059bc6c761477ed3746ff2eac15f5d71be3b786d84c8f900a23fa1064938dfa72b411dc60ff4185b3c4d18b0bf4f0a3a392cdcb1df1081552ebb55 WHIRLPOOL 03ea67ec40a951dd4e5dc6dafe56c147ab0f16605bc32c6f9ca55c3e9ed74adeb14c8a2c952a3160453bcb827d175ce93cc3514aa607bf76e77660d21eb387d6
 EBUILD ghc-7.6.3.ebuild 26240 SHA256 517f567d0241deee7c473edcc999c7255f7a8cb14e6cc36f13850021e7802310 SHA512 26c8aa9894e1bcc194b2f62dd1741d03e90ea0b8607e760027117c391ab0ff036e66fe76ce8b07d5cc1acf372e3ed4316d9b866d818e5299285cfbfcb13c19eb WHIRLPOOL 429c9f83b45b153145a999655c6a9f17518f70e48ecbfe91cb8d682eacc3ea9d7818b0de23a7507aa454b3885dbcff3a8393f5f4eb734402f1dd0688535500bc
 EBUILD ghc-7.8.3.ebuild 20718 SHA256 36f3de9ed9f5f72e742a0109e02b3c305d4a7e7fa40790990f66bec2e37ef9d0 SHA512 09caadef7b208ad4c89bbf70c1897f01a0cb5f3a15c4005c606651c1424d0c920a8dce7a45a3abaa77a2516c55a71ea2745175f248dd90d8044fc2df5763ef7f WHIRLPOOL 40815fd6c952826a4b299dc26ce1dd3431026e8a7075f495273f66fc57f841bad8f0fc20a4f3b21eb1b08adc036edff75330e2810d68a23dfe4f03f02abf6605
-MISC ChangeLog 48964 SHA256 4764308323497e2b87b50410a670ace30018b54673bb074fa2edbc56f029bf2f SHA512 ca8277ca39cce513f0e9bd6dba2eea930d9e873785181938d0998625a42f16de1d9846ec231859b47437b11aec44980bf3c3ff700b224ee0bc3e564ba69d0fa6 WHIRLPOOL 734a60c720c8da4974967486f220457bf5f203c4a6c1d7943d0a8d6bc55b7acefdfc77239d8778ce488f079acc6f875def56955481cb4b661aa381a312286b6a
+MISC ChangeLog 49123 SHA256 13532ce7a9c8ac48e7dc16c1e54ea73fae46fc68267a19f4949c56b6cf5bc553 SHA512 b256bbbc884c1c05d5d041e135e19da1cead2a961912a1b1a0f94efb1bebfb501f0a71bd78e1e7e965ae672dc7550365e0cdfd0a57df5766a9d5871384327105 WHIRLPOOL 8f69b9d49d139a972b93c5f221ff547b86a482ce94db8be27d75450878dea2586ea4e800dd499b5b41f89d0aabaed7ed829783d041dfefd7bfc8077068836571
 MISC metadata.xml 561 SHA256 f964cd5b31b8a5e1979c03ced645f9e28b61528b456340e36cacef4b25104735 SHA512 50ef5db553f7ae99de80ef2f45d2c6c9c3b85bc4ef70ef7f79797a3c47f33a8ca9c9caf14752f38b81f0abd17df594820bc2161a10c7d177c126fcb101b24c31 WHIRLPOOL 1d4e744e284d0053a8cff1547dd25c4f0f2dcb8da35dee4523dbadcc9e29a92beb6ce7e63044c09995ffb255d39c5f02d901b330c481763b608ba4ed6e243faf
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iEYEAREIAAYFAlQJkzcACgkQcaHudmEf86pYmACfVEmpK9h16/FvHnA3ORVMC9H2
-ycUAn0VQcs8OINruGwXLiy0/IHCzXxjx
-=kgyd
+iEYEAREIAAYFAlQL+0gACgkQcaHudmEf86oaKACfZs1vWyEZqz5/xTqDXV6LUVFZ
+bKoAoIUNX5pFnIe4Xk2PYgCmDXWYOyrh
+=zWlP
 -----END PGP SIGNATURE-----
