@@ -11,4 +11,4 @@ RDEPEND=!dev-lang/ghc-bin !kernel_Darwin? ( >=sys-devel/gcc-2.95.3 ) kernel_linu
 SLOT=0
 SRC_URI=!binary? ( http://darcs.haskell.org/download/dist/6.12.3/ghc-6.12.3-src.tar.bz2 ) !ghcbootstrap? ( alpha? ( http://code.haskell.org/~slyfox/ghc-alpha/ghc-bin-6.12.3-alpha-haddock.tbz2 ) x86? ( mirror://gentoo/ghc-bin-6.12.3-x86.tbz2 ) amd64? ( mirror://gentoo/ghc-bin-6.12.3-amd64.tbz2 ) ia64? ( http://code.haskell.org/~slyfox/ghc-ia64/ghc-bin-6.12.3-ia64-haddock.tbz2 ) sparc? ( http://code.haskell.org/~slyfox/ghc-sparc/ghc-bin-6.12.3-sparc.tbz2 ) ppc64? ( mirror://gentoo/ghc-bin-6.12.3-ppc64.tbz2 ) ppc? ( mirror://gentoo/ghc-bin-6.12.3-ppc.tbz2 ) x86-fbsd? ( http://code.haskell.org/~slyfox/ghc-x86-fbsd/ghc-bin-6.12.3-x86-fbsd.tbz2 ) x86-macos? ( http://www.haskell.org/ghc/dist/6.10.1/maeder/ghc-6.10.1-i386-apple-darwin.tar.bz2 ) ppc-macos? ( http://www.haskell.org/ghc/dist/6.10.1/maeder/ghc-6.10.1-powerpc-apple-darwin.tar.bz2 ) x86-solaris? ( http://www.haskell.org/ghc/dist/6.10.4/maeder/ghc-6.10.4-i386-unknown-solaris2.tar.bz2 ) sparc-solaris? ( http://www.haskell.org/ghc/dist/6.10.4/maeder/ghc-6.10.4-sparc-sun-solaris2.tar.bz2 ) )
 _eclasses_=autotools	ebea507d219855923e3438c953cf4ab8	base	87f7447ccfc06fd0729ff4684e11e0d6	bash-completion	f913ed18b57a2d3372c4291680454db4	eutils	06133990e861be0fe60c2b428fd025d9	flag-o-matic	75e24bac8423c515dd9c5717f08feb83	ghc-package	9dd58db252d8252779bb74ed015196e3	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	pax-utils	8257582809714b788173511f975d767d	toolchain-funcs	0f1760274637a138b99bb649202ea402	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=1431d98d9a044fe9fe3f96e37b0e26ef
+_md5_=5a83ec47fd7ad46bbc6584db98903d8b
