@@ -11,4 +11,4 @@ RDEPEND=!kernel_Darwin? ( >=sys-devel/gcc-2.95.3 ) kernel_linux? ( >=sys-devel/b
 SLOT=0
 SRC_URI=!binary? ( http://www.haskell.org/ghc/dist/7.0.4/ghc-7.0.4-src.tar.bz2 ) !ghcbootstrap? ( alpha? ( http://code.haskell.org/~slyfox/ghc-alpha/ghc-bin-7.0.4-alpha.tbz2 ) arm? ( http://code.haskell.org/~slyfox/ghc-arm/ghc-bin-7.0.4-arm.tbz2 ) amd64? ( http://code.haskell.org/~slyfox/ghc-amd64/ghc-bin-7.0.4-amd64.tbz2 ) ppc? ( mirror://gentoo/ghc-bin-7.0.4-ppc.tbz2 ) ppc64? ( http://code.haskell.org/~slyfox/ghc-ppc64/ghc-bin-7.0.4-ppc64.tbz2 ) sparc? ( http://code.haskell.org/~slyfox/ghc-sparc/ghc-bin-7.0.4-sparc.tbz2 ) x86? ( http://code.haskell.org/~slyfox/ghc-x86/ghc-bin-7.0.4-x86.tbz2 ) )
 _eclasses_=autotools	ebea507d219855923e3438c953cf4ab8	base	87f7447ccfc06fd0729ff4684e11e0d6	bash-completion	f913ed18b57a2d3372c4291680454db4	eutils	06133990e861be0fe60c2b428fd025d9	flag-o-matic	75e24bac8423c515dd9c5717f08feb83	ghc-package	9dd58db252d8252779bb74ed015196e3	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	pax-utils	8257582809714b788173511f975d767d	toolchain-funcs	0f1760274637a138b99bb649202ea402	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=2c32ce7a33beccb990af1fdc345f77f4
+_md5_=edb9660b7e188deb58bd18e27357c42d
