@@ -1,6 +1,10 @@
 # ChangeLog for dev-lang/ghc
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/ghc/ChangeLog,v 1.268 2014/09/05 10:40:45 slyfox Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/ghc/ChangeLog,v 1.269 2014/09/07 06:29:23 slyfox Exp $
+
+  07 Sep 2014; Sergei Trofimovich <slyfox@gentoo.org> ghc-6.12.3-r2.ebuild,
+  ghc-7.0.4.ebuild:
+  Disable bitrot bfd code (bug #522268 by Sebastian Pipping).
 
   05 Sep 2014; Sergei Trofimovich <slyfox@gentoo.org> ghc-7.8.3.ebuild:
   Allow USE=gmp on ia64 (fixed by ghc-7.8.3-ia64-prim.patch).
